--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
             <li>出身地：福岡県</li>
                     
 
-        </ul>          
+        </ul>     
+        
+        <h2>好きなもの</h2>
+        <ul>
+            <li>
+                チョコ
+            </li>
+        </ul>
   
     </body>
 </html>
