好きな飲み物を追記

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
                 チョコ
             </li>
         </ul>
+
+        <h2>好きな飲み物</h2>
+        <ul>
+            <li>
+                コーラ
+            </li>
+        </ul>
   
     </body>
 </html>
