隣の人の好きな食べ物を追加

--- a/neighor.html
+++ b/neighor.html
@@ -23,6 +23,12 @@
 
         </ul>  
        
+        <h2>好きな食べ物</h2>
+        <ul>
+            <li>
+                牛カツ
+            </li>
+        </ul>
         
     </body>
 </html>
