--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
                     
 
         </ul>          
+
+        <h2>嫌いなもの</h2>
+        <ul>
+            <li>
+                わさび
+            </li>
+        </ul>
   
     </body>
 </html>
