--- a/index.html
+++ b/index.html
@@ -46,5 +46,12 @@
             </li>
         </ul>
 
+        <h2>経歴</h2>
+        <ul>
+            <li>幼稚園：小笹幼稚園</li>
+            <li>小学校：小笹小学校</li>
+            <li>中学校：平尾中学校</li>
+        </ul>
+
     </body>
 </html>
