経歴に高校以降を追加する

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             <ul>
                 <li>毎日遅刻ギリギリだった</li>
             </ul>
+            <li>高校：城南高校</li>
+            <li>大学：武蔵野大学</li>
         </ul>
     </body>
 </html>
